--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -48,7 +49,7 @@ body {
 }
 
 .text--sm {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 .text--md {
   font-size: 1.8rem;
@@ -61,6 +62,9 @@ body {
 }
 .text--bold {
   font-weight: bold;
+}
+.text--inline {
+  display: inline-block;
 }
 
 .u-mt-sm {
@@ -146,6 +150,7 @@ body {
 .btn {
   display: inline-block;
   width: auto;
+  text-align: center;
   padding: 1rem 2rem;
   border-radius: 5px;
   color: inherit;
@@ -177,6 +182,11 @@ body {
 }
 .btn--text:hover {
   color: #f96d00;
+}
+@media only screen and (max-width: 56.25em) {
+  .btn--submit {
+    width: 100%;
+  }
 }
 
 .card--features {
@@ -213,6 +223,70 @@ body {
   }
 }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.form__group--flex {
+  display: flex;
+  align-items: center;
+}
+.form__label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.form__label--checkbox {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border: 2px solid #a2abad;
+  border-radius: 2px;
+  position: relative;
+  margin-right: 1rem;
+  transition: all 0.25s ease;
+}
+.form__label--checkbox::after {
+  content: "✓";
+  font-weight: bold;
+  color: #f96d00;
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -52.5%) scale(0.9);
+  opacity: 0;
+}
+.form__input {
+  display: block;
+  width: 75%;
+  padding: 1rem 2rem;
+  border: 2px solid #a2abad;
+  border-radius: 5px;
+  transition: all 0.25s ease;
+}
+@media only screen and (max-width: 56.25em) {
+  .form__input {
+    width: 100%;
+  }
+}
+.form__input:focus {
+  outline: none;
+  border-color: #f96d00;
+}
+.form__checkbox {
+  display: none;
+}
+.form__checkbox:checked + .form__label--checkbox {
+  border-color: #f96d00;
+}
+.form__checkbox:checked + .form__label--checkbox::after {
+  opacity: 1;
+}
+
+::placeholder {
+  color: #677275;
+}
+
 .hero__image-box {
   width: 100%;
   height: 100%;
@@ -232,8 +306,18 @@ body {
 .link:link, .link:visited {
   text-decoration: none;
   transition: all 0.25s ease;
+  color: inherit;
 }
-.link:hover, .link:active {
+.link--highlighted:link, .link--highlighted:visited {
+  color: #f96d00;
+}
+.link--highlighted:hover, .link--highlighted:active {
+  color: #f96d00;
+}
+.link--light:link, .link--light:visited {
+  color: #f9f9f9;
+}
+.link--light:hover, .link--light:active {
   color: #f96d00;
 }
 
@@ -379,6 +463,27 @@ body {
 
 .section {
   margin: 10rem 0;
+}
+
+.section--sign-up {
+  margin-top: 15rem;
+}
+
+.sign-up__image-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 56.25em) {
+  .sign-up__image-box {
+    display: none;
+  }
+}
+.sign-up__image {
+  transform: scale(1.5);
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
