--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -1,7 +1,14 @@
-$color-primary: #f96d00;
-$color-primary-light: #ff9e03;
-$color-secondary: #00adb5;
-$color-secondary-light: #06a5ff;
+// #13A6CA
+// #06A0FF
+
+// Change this color to change everything that uses it
+$color-primary: #0c9ef8;
+$color-primary-light: #40c2e9;
+$color-primary-dark: #115eb6;
+
+$color-secondary: #ff760d;
+$color-secondary-light: #faa00f;
+$color-secondary-dark: #e47309;
 
 $color-white: #fff;
 $color-light-1: #f9f9f9;
