--- a/src/sass/pages/_sign-up.scss
+++ b/src/sass/pages/_sign-up.scss
@@ -5,7 +5,8 @@
     margin: 15rem 0;
 
     @include respond("tablet-portrait") {
-      margin-top: 10rem 0;
+      margin: 10rem 0;
+      margin-bottom: 5rem;
     }
   }
 }
