--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,6 +147,12 @@ body {
   background: #d7dcde;
 }
 
+.logo {
+  height: 5rem;
+  width: 10rem;
+  color: #041c24;
+}
+
 .btn {
   display: inline-block;
   width: auto;
@@ -439,10 +445,7 @@ body {
 }
 .header__logo-box {
   margin-left: 8rem;
-}
-.header__logo {
-  font-weight: bold;
-  font-size: 2rem;
+  margin-top: 5px;
 }
 
 .nav__list {
@@ -477,7 +480,8 @@ body {
 }
 @media only screen and (max-width: 56.25em) {
   .section--sign-up {
-    margin-top: 10rem 0;
+    margin: 10rem 0;
+    margin-bottom: 5rem;
   }
 }
 
@@ -500,11 +504,12 @@ body {
 }
 
 .section--log-in {
-  margin-top: 15rem;
+  margin: 15rem 0;
 }
 @media only screen and (max-width: 56.25em) {
   .section--log-in {
-    margin-top: 10rem;
+    margin: 10rem 0;
+    margin-bottom: 5rem;
   }
 }
 
