--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -18,10 +18,6 @@
 
   &__logo-box {
     margin-left: $m-xl;
-  }
-
-  &__logo {
-    font-weight: bold;
-    font-size: 2rem;
+    margin-top: 5px;
   }
 }
