Added a homescreen/dashboard - This is the screen a user will see once signed in

--- a/src/sass/abstracts/_colors.scss
+++ b/src/sass/abstracts/_colors.scss
@@ -10,6 +10,10 @@ $color-secondary: #ff760d;
 $color-secondary-light: #faa00f;
 $color-secondary-dark: #e47309;
 
+$color-tertiary: #19c421;
+$color-tertiary-light: #2fe265;
+$color-tertiary-dark: #0b9454;
+
 $color-white: #fff;
 $color-light-1: #f9f9f9;
 $color-light-2: #fdf6f6;
