--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,7 +42,7 @@ body {
   font-size: 3.2rem;
 }
 .heading--tertiary {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
 .heading--light {
   color: #f9f9f9;
@@ -151,21 +151,19 @@ body {
   height: 5rem;
   width: 10rem;
   color: #041c24;
+  display: flex;
 }
 
-.btn {
+.btn:link, .btn:visited {
+  text-decoration: none;
   display: inline-block;
   width: auto;
   text-align: center;
-  color: inherit;
   transition: all 0.25s ease;
-}
-.btn:link, .btn:visited {
-  text-decoration: none;
 }
 .btn--primary {
   padding: 1rem 2rem;
-  border: 2px solid #0c9ef8;
+  border: 1px solid #0c9ef8;
   border-radius: 5px;
   background: #0c9ef8;
   color: #f9f9f9;
@@ -180,8 +178,9 @@ body {
   transform: translateY(-1.5px);
 }
 .btn--secondary {
+  color: inherit;
   padding: 1rem 2rem;
-  border: 2px solid #0c9ef8;
+  border: 1px solid #0c9ef8;
   border-radius: 5px;
 }
 .btn--secondary:hover {
@@ -197,13 +196,21 @@ body {
   }
 }
 
-.card--features {
+.card {
   padding: 4rem;
-  padding-top: 0;
   box-shadow: 0 1rem 2rem rgba(185, 185, 185, 0.25);
-  border: 2px solid rgba(215, 220, 222, 0.5);
+  border: 1px solid rgba(215, 220, 222, 0.5);
   border-radius: 10px;
+  background: white;
   transition: all 0.25s ease;
+}
+.card:hover {
+  border-color: #0c9ef8;
+  transform: translateY(-5px);
+  box-shadow: 0 1rem 2rem rgba(122, 122, 122, 0.25);
+}
+.card--features {
+  padding-top: 0;
 }
 @media only screen and (max-width: 56.25em) {
   .card--features {
@@ -211,10 +218,8 @@ body {
     margin: 0 auto;
   }
 }
-.card--features:hover {
-  border-color: #0c9ef8;
-  transform: translateY(-5px);
-  box-shadow: 0 1rem 2rem rgba(122, 122, 122, 0.25);
+.card--recent-tests, .card--class-stats {
+  padding: 2rem;
 }
 .card__icon-box {
   display: flex;
@@ -229,6 +234,83 @@ body {
   .card__icon {
     width: 20%;
   }
+}
+
+.test-date {
+  display: flex;
+}
+.test-date > * {
+  display: flex;
+  align-items: center;
+}
+.test-date__day {
+  margin-right: 2rem;
+}
+.test-date__icon {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+}
+
+.test-stats {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.test-stats__value {
+  font-weight: bold;
+}
+.test-stats__value--no-stats {
+  color: #0c9ef8;
+}
+.test-stats__value--max {
+  color: #19c421;
+}
+.test-stats__value--avg {
+  color: #0c9ef8;
+}
+.test-stats__value--min {
+  color: #ff760d;
+}
+.test-stats__subtext--max {
+  color: #19c421;
+}
+.test-stats__subtext--avg {
+  color: #0c9ef8;
+}
+.test-stats__subtext--min {
+  color: #ff760d;
+}
+.test-stats__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.class-stats {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.class-stats__group {
+  display: flex;
+  align-items: center;
+}
+.class-stats__value {
+  font-weight: bold;
+  margin-right: 1rem;
+}
+.class-stats__value--no-stats {
+  color: #0c9ef8;
+}
+.class-stats__icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+.class-stats__icon--up {
+  color: #19c421;
+}
+.class-stats__icon--down {
+  color: #ff760d;
 }
 
 .form__group:not(:last-child) {
@@ -329,11 +411,16 @@ body {
 .link:hover, .link:active, .link--highlighted:hover, .link--highlighted:active, .link--light:hover, .link--light:active {
   color: #0c9ef8;
 }
+.link--active {
+  border: 1px solid rgba(215, 220, 222, 0.5);
+  border-radius: 5px;
+  box-shadow: 0 1rem 2rem rgba(211, 211, 211, 0.25);
+}
 
 .testimonial {
   padding: 4rem;
   box-shadow: 0 1rem 2rem rgba(185, 185, 185, 0.25);
-  border: 2px solid rgba(215, 220, 222, 0.5);
+  border: 1px solid rgba(215, 220, 222, 0.5);
   border-radius: 10px;
   transition: all 0.25s ease;
   display: flex;
@@ -363,6 +450,49 @@ body {
   height: 10rem;
   border-radius: 50%;
   background: #000;
+}
+
+.side-nav {
+  flex: 0 0 20%;
+  padding: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.side-nav__list {
+  list-style: none;
+}
+.side-nav__item:not(:last-child) {
+  margin-bottom: 1rem;
+}
+.side-nav__link {
+  display: flex;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+.side-nav__icon {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+  display: flex;
+}
+.side-nav__icon:last-child {
+  margin-left: 1rem;
+}
+.side-nav__icon--sm {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+.side-nav__dropdown {
+  margin-left: 30%;
+}
+.side-nav__dropdown-list {
+  list-style: none;
+}
+.side-nav__dropdown-item:not(:last-child) {
+  margin-bottom: 1rem;
+}
+.side-nav__dropdown-link {
+  font-size: 1.4rem;
 }
 
 .row {
@@ -429,23 +559,23 @@ body {
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 8rem;
+  height: 6rem;
   background: rgba(249, 249, 249, 0.85);
   backdrop-filter: blur(5px);
-  border-bottom: 2px solid rgba(215, 220, 222, 0.5);
-  box-shadow: 0 1rem 2rem rgba(211, 211, 211, 0.25);
+  border-bottom: 1px solid rgba(215, 220, 222, 0.5);
   z-index: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+.header--fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 .header__logo-box {
   margin-left: 8rem;
-  margin-top: 5px;
 }
 
 .nav__list {
@@ -462,6 +592,54 @@ body {
     margin-right: 2rem;
   }
 }
+.nav__notifications {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.nav__icon-box {
+  display: flex;
+}
+.nav__icon {
+  width: 2rem;
+  height: 2rem;
+  color: #041c24;
+}
+.nav__icon--sm {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+.nav__notification-count {
+  font-size: 1rem;
+  color: #f9f9f9;
+  min-width: 2rem;
+  height: 2rem;
+  background: #0c9ef8;
+  border-radius: 100rem;
+  position: absolute;
+  top: -1rem;
+  right: -1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav__user {
+  display: flex;
+  align-items: center;
+}
+.nav__user:hover .nav__icon {
+  color: currentColor;
+}
+.nav__user-image {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.nav__user-name {
+  margin-right: 0.5rem;
+}
 
 .footer {
   background: #041c24;
@@ -471,8 +649,27 @@ body {
   flex-direction: column;
 }
 
+.content {
+  display: flex;
+}
+
 .section {
   margin: 10rem 0;
+}
+
+.section--recent-tests, .section--class-stats {
+  margin: 4rem 0;
+}
+
+.content-view {
+  flex: 1;
+  padding-right: 4rem;
+}
+
+.stats-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .section--sign-up {
