--- a/src/sass/abstracts/_fonts.scss
+++ b/src/sass/abstracts/_fonts.scss
@@ -1,5 +1,6 @@
 // ? FONTS
 $text-size-default: 1.6rem;
+$text-size-xs: 1rem;
 $text-size-sm: 1.4rem;
 $text-size-md: 1.8rem;
 $text-size-lg: 2.4rem;
