--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,23 +1,25 @@
 @use "../abstracts" as *;
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 8rem;
+  height: 6rem;
   background: rgba($color-light-1, 0.85);
   backdrop-filter: blur(5px);
-  border-bottom: 2px solid rgba($color-grey-light-2, 0.5);
-  @include box-shadow("sm", darken($color-light-1, 15%));
+  border-bottom: 1px solid rgba($color-grey-light-2, 0.5);
+  // @include box-shadow("sm", darken($color-light-1, 15%));
   z-index: 10;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 
+  &--fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
   &__logo-box {
     margin-left: $m-xl;
-    margin-top: 5px;
   }
 }
