--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -17,4 +17,64 @@
       }
     }
   }
+
+  &__notifications {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+  }
+
+  &__icon-box {
+    display: flex;
+  }
+
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+    color: $color-dark;
+
+    &--sm {
+      height: 1.25rem;
+      width: 1.25rem;
+    }
+  }
+
+  &__notification-count {
+    font-size: $text-size-xs;
+    color: $color-light-1;
+    min-width: 2rem;
+    height: 2rem;
+    background: $color-primary;
+    border-radius: 100rem;
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+
+    &:hover {
+      & .nav__icon {
+        color: currentColor;
+      }
+    }
+
+    &-image {
+      width: 4rem;
+      height: 4rem;
+      border-radius: 50%;
+      margin-right: 1rem;
+    }
+
+    &-name {
+      margin-right: 0.5rem;
+    }
+  }
 }
